# studioengine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cursors.h  main.cpp
Common/: aboutviewcontroller.cpp  aboutviewcontroller.h  arrangementview.cpp  arrangementview.h  arrangementviewcontroller.cpp  arrangementviewcontroller.h  audioexportviewcontroller.cpp  audioexportviewcontroller.h  borderview.cpp  borderview.h  dbview.cpp  dbview.h  dbviewcontroller.cpp  dbviewcontroller.h  eventlistitemview.cpp  eventlistitemview.h  folderlistitemview.cpp  folderlistitemview.h  foldersview.cpp  foldersview.h  helpers.cpp  helpers.h  keyboardv.cpp  keyboardv.h  melobaseapp.cpp  melobaseapp.h  melobasescriptmodule.cpp  melobasescriptmodule.h  midihub.cpp  midihub.h  midiimport.cpp  midiimport.h  midiimportviewcontroller.cpp  midiimportviewcontroller.h  modalviewcontroller.cpp  (+57 more)
Libraries/MDStudio-SDK/Source/: CMakeLists.txt
Libraries/MDStudio-SDK/Source/MDStudio/Images/: Background.idraw  Foreground.idraw  Keyboard.idraw  PianoRoll.idraw  Staff.idraw
Libraries/MDStudio-SDK/Source/MDStudio/PortableCore/: any.h  app.cpp  app.h  base64.h  fulltypename.h  mdns.cpp  mdns.h  mdnsd.cpp  mdnsd.h  mongoose.cpp  mongoose.h  pasteboard.cpp  pasteboard.h  platform.cpp  platform.h  plist.cpp  plist.h  plistdate.cpp  plistdate.h  property.h  script.cpp  script.h  types.h  undomanager.cpp  undomanager.h  uricodec.cpp  uricodec.h  ustring.cpp  ustring.h  utf8.h  utf8checked.h  utf8core.h  utf8unchecked.h
Libraries/MDStudio-SDK/Source/MDStudio/PortableCore/Audio/: atomicops.h  audioexport.cpp  audioexport.h  audioplayerunit.cpp  audioplayerunit.h  audioscriptmodule.cpp  audioscriptmodule.h  event.cpp  event.h  filter_k12z4.h  fmunit.cpp  fmunit.h  instrument.cpp  instrument.h  instrumentmanager.cpp  instrumentmanager.h  lowpassfilterunit.cpp  lowpassfilterunit.h  metronome.cpp  metronome.h  midi.cpp  midi.h  midifile.cpp  midifile.h  mixer.cpp  mixer.h  mixer_ios.cpp  multiinstrument.cpp  multiinstrument.h  readerwriterqueue.h  sample.cpp  sample.h  samplerunit.cpp  samplerunit.h  sequence.cpp  sequence.h  sequencer.cpp  sequencer.h  sineunit.cpp  sineunit.h  (+7 more)
Libraries/MDStudio-SDK/Source/MDStudio/PortableCore/Audio/Chorus/: chorusmodel.cpp  chorusmodel.h
Libraries/MDStudio-SDK/Source/MDStudio/PortableCore/Audio/Filters/include/DspFilters/: Biquad.h  Cascade.h  Utilities.h
Libraries/MDStudio-SDK/Source/MDStudio/PortableCore/Audio/Reverb/: comb.cpp  comb.h  denormals.h  revmodel.cpp  revmodel.h  tuning.h
Libraries/MDStudio-SDK/Source/MDStudio/PortableCore/DB/: db.cpp  db.h
Libraries/MDStudio-SDK/Source/MDStudio/PortableCore/UI/: animation.cpp  animation.h  bezier.cpp  bezier.h  boxview.cpp  boxview.h  button.cpp  button.h  color.cpp  color.h  column.cpp  column.h  combobox.cpp  combobox.h  control.cpp  control.h  draw.cpp  draw.h  drawcontext.cpp  drawcontext.h  font.cpp  font.h  image.cpp  image.h  imageview.cpp  imageview.h  keyboard.cpp  keyboard.h  keyboardh.cpp  keyboardh.h  keyboardv.cpp  keyboardv.h  labelview.cpp  labelview.h  levelindicator.cpp  levelindicator.h  listitemview.cpp  listitemview.h  listview.cpp  listview.h  (+74 more)
Libraries/MDStudio-SDK/Source/MDStudioTests/: MDStudioTests.h  MDStudioTests.m
Libraries/MDStudio-SDK/Source/asio/include/asio/ip/detail/impl/: endpoint.ipp
Libraries/MDStudio-SDK/Source/expat/: Makefile  expat.sln  libtool
Libraries/MDStudio-SDK/Source/expat/examples/: elements.vcxproj  outline.vcxproj
Libraries/MDStudio-SDK/Source/expat/lib/: expat.vcxproj  expat_static.vcxproj  expatw.vcxproj  expatw_static.vcxproj  xmlparse.c
Libraries/MDStudio-SDK/Source/expat/xmlwf/: xmlwf.vcxproj
Libraries/MDStudio-SDK/Source/freetype/builds/unix/: libtool  unix-cc.mk  unix-def.mk
Libraries/MDStudio-SDK/Source/freetype/objs/: libfreetype.la
Libraries/MDStudio-SDK/Source/libaiff-5.0/: libaiff.c
Libraries/MDStudio-SDK/Source/libaiff-5.0/libaiff/: config.h
Libraries/MDStudio-SDK/Source/libaiff-5.0/vs2015/aiff/: ReadMe.txt  aiff.sln  aiff.vcxproj
Libraries/MDStudio-SDK/Source/libpng/: libtool  pngpriv.h
Libraries/MDStudio-SDK/Source/libpng/projects/vstudio/libpng/: libpng.vcxproj
Libraries/MDStudio-SDK/Source/libpng/projects/vstudio/zlib/: zlib.vcxproj
Libraries/MDStudio-SDK/Source/lrdb/include/lrdb/: debugger.hpp
Libraries/MDStudio-SDK/Source/lua/src/: loslib.c
Libraries/MDStudio-SDK/Source/lua/vs2015/lua/: lua.sln  lua.vcxproj
Libraries/MDStudio-SDK/Source/rtmidi/: CMakeLists.txt  RtMidi.cpp
Libraries/MDStudio-SDK/Source/sqlite/: libtool
Libraries/MDStudio-SDK/Source/sqlite/.deps/: shell.Po  sqlite3.Plo
Libraries/MDStudio-SDK/Source/sqlite/vs2015/sqlite3/: ReadMe.txt  sqlite3.sln  sqlite3.vcxproj
Libraries/MDStudio-SDK/Source/tinysvcmdns/: .hg_archival.txt  testmdnsd.c
Libraries/MDStudio-SDK/Source/zlib/: zutil.h
Libraries/MDStudio-SDK/Tests/: CMakeLists.txt  main.cpp  test_importexport.cpp  test_importexport.h  test_pasteboard.cpp  test_pasteboard.h  test_plist.cpp  test_plist.h  test_undomanager.cpp  test_undomanager.h  tests.cpp
Libraries/MelobaseCore/Source/: CMakeLists.txt  melobasecore.h  melobasecore_event.cpp  melobasecore_event.h  melobasecore_sequence.cpp  melobasecore_sequence.h  melobasecorescriptmodule.cpp  melobasecorescriptmodule.h  metronomecontroller.cpp  metronomecontroller.h  sequenceeditor.cpp  sequenceeditor.h  sequencesdb.cpp  sequencesdb.h  server.cpp  server.h  studiocontroller.cpp  studiocontroller.h  utils.cpp  utils.h
Libraries/MelobaseCore/Source/Sync/: databasesync.cpp  databasesync.h  folderparser.cpp  folderparser.h  folderpull.cpp  folderpull.h  folderpush.cpp  folderpush.h  folderssync.cpp  folderssync.h  sequenceparser.cpp  sequenceparser.h  sequencepull.cpp  sequencepull.h  sequencepush.cpp  sequencepush.h  sequencessync.cpp  sequencessync.h  sync.h
Libraries/MelobaseCore/Tests/: CMakeLists.txt  main.cpp  sequenceutils.cpp  sequenceutils.h  test_sequenceedition.cpp  test_sequenceedition.h  test_sequencesdb.cpp  test_sequencesdb.h  test_sync.cpp  test_sync.h  tests.cpp  tests.h
UI/: Common.lua  (+24 more)
(+35 files in other folders)
